--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employees?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/auctions?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin100
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
