--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,4 +2,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/auctions?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
